@@ -1,5 +1,6 @@
 Build.PL
 Changes
+examples/example.pl
 lib/File/pushd.pm
 LICENSE
 Makefile.PL
